--- a/templates/forum.html
+++ b/templates/forum.html
@@ -39,20 +39,20 @@
 	</div>
 	{{if .CurrentUser.Perms.CreateTopic}}
 	<div id="forum_topic_create_form" class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="Quick Topic Form">
-		<form id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
+		<form id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/" method="post"></form>
 		<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="Your Avatar" title="Your Avatar" />
-		<input form="topic_create_form_form" id="topic_board_input" name="topic-board" value="{{.Forum.ID}}" type="hidden">
+		<input form="quick_post_form" id="topic_board_input" name="topic-board" value="{{.Forum.ID}}" type="hidden">
 		<div class="main_form">
 			<div class="topic_meta">
 				<div class="formrow topic_name_row real_first_child">
 					<div class="formitem">
-						<input form="topic_create_form_form" name="topic-name" placeholder="What's up?" required>
+						<input form="quick_post_form" name="topic-name" placeholder="What's up?" required>
 					</div>
 				</div>
 			</div>
 			<div class="formrow topic_content_row">
 				<div class="formitem">
-					<textarea form="topic_create_form_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
+					<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
 				</div>
 			</div>
 			<div class="formrow poll_content_row auto_hide">
@@ -62,10 +62,10 @@
 			</div>
 			<div class="formrow quick_button_row">
 				<div class="formitem">
-					<button form="topic_create_form_form" name="topic-button" class="formbutton">Create Topic</button>
-					<button form="topic_create_form_form" class="formbutton" id="add_poll_button">Add Poll</button>
+					<button form="quick_post_form" name="topic-button" class="formbutton">Create Topic</button>
+					<button form="quick_post_form" class="formbutton" id="add_poll_button">Add Poll</button>
 					{{if .CurrentUser.Perms.UploadFiles}}
-					<input name="upload_files" form="topic_create_form_form" id="upload_files" multiple type="file" style="display: none;" />
+					<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
 					<label for="upload_files" class="formbutton add_file_button">Add File</label>
 					<div id="upload_file_dock"></div>{{end}}
 					<button class="formbutton close_form">Cancel</button>
