--- a/templates/topics.html
+++ b/templates/topics.html
@@ -54,25 +54,25 @@
 	</form>
 </div>
 <div class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="Quick Topic Form">
-	<form name="topic_create_form_form" id="topic_create_form_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
-	<input form="topic_create_form_form" id="has_poll_input" name="has_poll" value="0" type="hidden" />
+	<form name="topic_create_form_form" id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
+	<input form="quick_post_form" id="has_poll_input" name="has_poll" value="0" type="hidden" />
 	<img class="little_row_avatar" src="{{.CurrentUser.Avatar}}" height="64" alt="Your Avatar" title="Your Avatar" />
 	<div class="main_form">
 		<div class="topic_meta">
 			<div class="formrow topic_board_row real_first_child">
-				<div class="formitem"><select form="topic_create_form_form" id="topic_board_input" name="topic-board">
+				<div class="formitem"><select form="quick_post_form" id="topic_board_input" name="topic-board">
 					{{range .ForumList}}<option {{if eq .ID $.DefaultForum}}selected{{end}} value="{{.ID}}">{{.Name}}</option>{{end}}
 				</select></div>
 			</div>
 			<div class="formrow topic_name_row">
 				<div class="formitem">
-					<input form="topic_create_form_form" name="topic-name" placeholder="What's up?" required>
+					<input form="quick_post_form" name="topic-name" placeholder="What's up?" required>
 				</div>
 			</div>
 		</div>
 		<div class="formrow topic_content_row">
 			<div class="formitem">
-				<textarea form="topic_create_form_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
+				<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="Insert post here" required></textarea>
 			</div>
 		</div>
 		<div class="formrow poll_content_row auto_hide">
@@ -80,16 +80,16 @@
 				<div class="pollinput" data-pollinput="0">
 					<input type="checkbox" disabled />
 					<label class="pollinputlabel"></label>
-					<input form="topic_create_form_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="Add new poll option" />
+					<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="Add new poll option" />
 				</div>
 			</div>
 		</div>
 		<div class="formrow quick_button_row">
 			<div class="formitem">
-				<button form="topic_create_form_form" class="formbutton">Create Topic</button>
-				<button form="topic_create_form_form" class="formbutton" id="add_poll_button">Add Poll</button>
+				<button form="quick_post_form" class="formbutton">Create Topic</button>
+				<button form="quick_post_form" class="formbutton" id="add_poll_button">Add Poll</button>
 				{{if .CurrentUser.Perms.UploadFiles}}
-				<input name="upload_files" form="topic_create_form_form" id="upload_files" multiple type="file" style="display: none;" />
+				<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
 				<label for="upload_files" class="formbutton add_file_button">Add File</label>
 				<div id="upload_file_dock"></div>{{end}}
 				<button class="formbutton close_form">Cancel</button>
