We now have analytics for the operating systems used by users.
Route view bumping logs have been moved from regular debug mode to super debug to reduce the amount of noise.
Added user friendly agent names.
Reduced the amount of logging outside of debug mode.
We now track Mobile Safari and the Samsung Browser.
We now track SeznamBot, TwitterBot, and Discourse's Bot.
We now track Trident.
UAs are now filtered to reduce the amount of bad activity.
Added more bad phrases for bad routes.

Added the viewchunks_systems table.
Began work on referrer tracking.

--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -42,6 +42,9 @@
 			<a href="/panel/analytics/agents/">Agents</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/systems/">Systems</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/crawlers/">Crawlers</a>
 		</div>
 	{{end}}
