--- a/templates/panel_analytics_system_views.html
+++ b/templates/panel_analytics_system_views.html
@@ -2,10 +2,10 @@
 <div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
 	<main id="panel_dashboard_right" class="colstack_right">
-		<form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/agents/" method="get">
+		<form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/system/{{.Agent}}" method="get">
 			<div class="colstack_item colstack_head">
 				<div class="rowitem">
-					<a>User Agents</a>
+					<a>{{.FriendlyAgent}} Views</a>
 					<select class="timeRangeSelector to_right" name="timeRange">
 						<option val="one-month"{{if eq .TimeRange "one-month"}} selected{{end}}>1 month</option>
 						<option val="two-days"{{if eq .TimeRange "two-days"}} selected{{end}}>2 days</option>
@@ -16,14 +16,36 @@
 				</div>
 			</div>
 		</form>
-		<div id="panel_analytics_agents" class="colstack_item rowlist">
-			{{range .ItemList}}
-			<div class="rowitem panel_compactrow editable_parent">
-				<a href="/panel/analytics/agent/{{.Agent}}" class="panel_upshift">{{.FriendlyAgent}}</a>
-				<span class="panel_compacttext to_right">{{.Count}} views</span>
-			</div>
-			{{end}}
+		<div id="panel_analytics_systems" class="colstack_graph_holder">
+			<div class="ct-chart"></div>
 		</div>
 	</main>
 </div>
+<script>
+let labels = [];
+let rawLabels = [{{range .PrimaryGraph.Labels}}
+{{.}},{{end}}
+];
+for(const i in rawLabels) {
+	let date = new Date(rawLabels[i]*1000);
+	console.log("date: ", date);
+	let minutes = "0" + date.getMinutes();
+	let label = date.getHours() + ":" + minutes.substr(-2);
+	console.log("label:", label);
+	labels.push(label);
+}
+labels = labels.reverse()
+
+let seriesData = [{{range .PrimaryGraph.Series}}
+{{.}},{{end}}
+];
+seriesData = seriesData.reverse();
+
+Chartist.Line('.ct-chart', {
+  labels: labels,
+  series: [seriesData],
+}, {
+  height: '250px',
+});
+</script>
 {{template "footer.html" . }}
