Added referrer analytics. You can now see what site a visitor has come from. Added the viewchunks_referrers table.

--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -42,10 +42,13 @@
 			<a href="/panel/analytics/agents/">Agents</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/crawlers/">Crawlers</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/systems/">Systems</a>
 		</div>
 		<div class="rowitem passive submenu">
-			<a href="/panel/analytics/crawlers/">Crawlers</a>
+			<a href="/panel/analytics/referrers/">Referrers</a>
 		</div>
 	{{end}}
 	<div class="rowitem passive">
