--- a/templates/panel_analytics_views.html
+++ b/templates/panel_analytics_views.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 <div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
-	<main id="panel_dashboard_right" class="colstack_right">
+	<main id="panel_analytics_right" class="colstack_right">
 		<form id="timeRangeForm" name="timeRangeForm" action="/panel/analytics/views/" method="get">
 			<div class="colstack_item colstack_head">
 				<div class="rowitem">
