--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -488,24 +488,24 @@ li a {
 .little_row_avatar {
 	display: none;
 }
-.topic_create_form .topic_button_row .formitem {
+.quick_create_form .quick_button_row .formitem {
 	display: flex;
 }
-.topic_create_form .formbutton:first-child {
+.quick_create_form .formbutton:first-child {
 	margin-left: 0px;
 	margin-right: 5px;
 }
-.topic_create_form .formbutton:not(:first-child) {
+.quick_create_form .formbutton:not(:first-child) {
 	margin-left: 0px;
 	margin-right: 5px;
 }
-.topic_create_form .formbutton:last-child {
+.quick_create_form .formbutton:last-child {
 	margin-left: auto;
 }
-.topic_create_form .upload_file_dock {
+.quick_create_form .upload_file_dock {
 	display: flex;
 }
-.topic_create_form .uploadItem {
+.quick_create_form .uploadItem {
 	display: inline-block;
 	margin-left: 8px;
 	margin-right: 8px;
@@ -765,6 +765,51 @@ button.username {
 	border-bottom: 1.5px inset var(--main-border-color);
 }
 
+/* TODO: Show the avatar next to the reply form */
+.topic_reply_container .userinfo {
+	display: none;
+}
+
+input[type=checkbox] {
+	display: none;
+}
+input[type=checkbox] + label {
+	display: inline-block;
+	width: 12px;
+	height: 12px;
+	margin-bottom: -2px;
+	border: 1px solid hsl(0, 0%, 80%);
+	background-color: white;
+}
+input[type=checkbox]:checked + label .sel {
+	display: inline-block;
+	width: 5px;
+	height: 5px;
+	background-color: white;
+}
+input[type=checkbox] + label.poll_option_label {
+	width: 18px;
+	height: 18px;
+	margin-right: 2px;
+	background-color: white;
+    border: 1px solid hsl(0, 0%, 70%);
+    color: #505050;
+}
+input[type=checkbox]:checked + label.poll_option_label .sel {
+	display: inline-block;
+	width: 10px;
+	height: 10px;
+	margin-left: 3px;
+	background: hsl(0,0%,70%);
+}
+.poll_option {
+	margin-bottom: 1px;
+}
+
+.quick_create_form  .pollinputlabel {
+	display: none;
+}
+
 .simple {
 	background-color: white;
 }
@@ -945,7 +990,7 @@ button.username {
 .pageset {
 	display: flex;
 	margin-bottom: 10px;
-	margin-top: -5px;
+	margin-top: 8px;
 }
 .pageitem {
 	border: 1px solid var(--main-border-color);
@@ -957,6 +1002,9 @@ button.username {
 .pageitem a {
 	color: black;
 	text-decoration: none;
+}
+.colstack_right .pageset {
+	margin-top: -5px;
 }
 
 /* Firefox specific CSS */
