Moved the counters to their own package. De-duped some of the logging code. Added per-route state to the not found errors. Exported debugDetail, debugDetailf, debugLog, and debugLogf. Tweaked the padding on Tempra Simple. Added panel submenus to Tempra Conflux. Added Chart CSS to Tempra Conflux. Fixed the padding and margins for the Control Panel in Cosora. Made Cosora's Control Panel a little more tablet friendly. Added the rowmsg CSS class to better style message rows. Removed the repetitive guard code for the pre-render hooks. Removed the repetitive guard code for the string-string hooks. We now capture views for routes.StaticFile Added the move action to the moderation logs.
Added the viewchunks_forums table.
Began work on Per-forum Views.
I probably missed a few things in this changelog.

--- a/templates/are_you_sure.html
+++ b/templates/are_you_sure.html
@@ -4,7 +4,7 @@
 		<div class="rowitem"><h1>Are you sure?</h1></div>
 	</div>
 	<div class="rowblock">
-		<div class="rowitem passive">{{.Something.Message}}<br /><br />
+		<div class="rowitem passive rowmsg">{{.Something.Message}}<br /><br />
 			<a class="username" href="{{.Something.URL}}?session={{.CurrentUser.Session}}">Continue</a>
 		</div>
 	</div>
