--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
 		<div class="rowitem"><h1>An error has occured</h1></div>
 	</div>
 	<div class="rowblock">
-		<div class="rowitem passive">{{.Something}}</div>
+		<div class="rowitem passive rowmsg">{{.Something}}</div>
 	</div>
 </main>
 {{template "footer.html" . }}
