--- a/templates/panel_backups.html
+++ b/templates/panel_backups.html
@@ -14,7 +14,7 @@
 				</span>
 			</div>
 			{{else}}
-			<div class="rowitem">There aren't any backups available at this time.</div>
+			<div class="rowitem rowmsg">There aren't any backups available at this time.</div>
 			{{end}}
 		</div>
 	</main>
