--- a/templates/panel_word_filters.html
+++ b/templates/panel_word_filters.html
@@ -19,7 +19,7 @@
 			</span>
 		</div>
 		{{else}}
-		<div class="rowitem editable_parent">
+		<div class="rowitem editable_parent rowmsg">
 			<a>You don't have any word filters yet.</a>
 		</div>
 		{{end}}
