--- a/templates/forums.html
+++ b/templates/forums.html
@@ -25,7 +25,7 @@
 		</span>
 		<div style="clear: both;"></div>
 	</div>
-	{{else}}<div class="rowitem passive">You don't have access to any forums.</div>{{end}}
+	{{else}}<div class="rowitem passive rowmsg">You don't have access to any forums.</div>{{end}}
 </div>
 
 </main>
