--- a/templates/panel_analytics_referrers.html
+++ b/templates/panel_analytics_referrers.html
@@ -22,7 +22,7 @@
 				<a href="/panel/analytics/referrer/{{.Agent}}" class="panel_upshift">{{.Agent}}</a>
 				<span class="panel_compacttext to_right">{{.Count}} views</span>
 			</div>
-			{{end}}
+			{{else}}<div class="rowitem passive rowmsg">No referrers could be found in the selected time range</div>{{end}}
 		</div>
 	</main>
 </div>
