Added per-forum analytics. Added one week as a time range option.
Moved routeForum to routes.ViewForum
Renamed form_vars to formVars.
Moved the analytics chart JS into it's own file.
Changed the header text on the requests chart from Views to Requests.
Added simple hooks to global.js
Moved some of the in funcname prints to debug mode.
De-duplicated some of the back-end analytics logic.

--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -3,7 +3,7 @@
 <div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
 <script>
-var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
+var formVars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
 </script>
 
 <main class="colstack_right">
