--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -36,6 +36,9 @@
 			<a href="/panel/analytics/topics/">Topics</a>
 		</div>
 		<div class="rowitem passive submenu">
+			<a href="/panel/analytics/forums/">Forums</a>
+		</div>
+		<div class="rowitem passive submenu">
 			<a href="/panel/analytics/routes/">Routes</a>
 		</div>
 		<div class="rowitem passive submenu">
