--- a/templates/panel_forums.html
+++ b/templates/panel_forums.html
@@ -2,7 +2,7 @@
 
 <div class="colstack panel_stack">
 {{template "panel-menu.html" . }}
-<script>var form_vars = {
+<script>var formVars = {
 	'forum_active': ['Hide','Show'],
 	'forum_preset': ['all','announce','members','staff','admins','archive','custom']};
 </script>
