--- a/templates/panel_analytics_agent_views.html
+++ b/templates/panel_analytics_agent_views.html
@@ -8,6 +8,7 @@
 					<a>{{.FriendlyAgent}} Views</a>
 					<select class="timeRangeSelector to_right" name="timeRange">
 						<option val="one-month"{{if eq .TimeRange "one-month"}} selected{{end}}>1 month</option>
+						<option val="one-week"{{if eq .TimeRange "one-week"}} selected{{end}}>1 week</option>
 						<option val="two-days"{{if eq .TimeRange "two-days"}} selected{{end}}>2 days</option>
 						<option val="one-day"{{if eq .TimeRange "one-day"}} selected{{end}}>1 day</option>
 						<option val="twelve-hours"{{if eq .TimeRange "twelve-hours"}} selected{{end}}>12 hours</option>
@@ -17,35 +18,17 @@
 			</div>
 		</form>
 		<div id="panel_analytics_views" class="colstack_graph_holder">
-			<div class="ct-chart"></div>
+			<div class="ct_chart"></div>
 		</div>
 	</main>
 </div>
 <script>
-let labels = [];
 let rawLabels = [{{range .PrimaryGraph.Labels}}
 {{.}},{{end}}
 ];
-for(const i in rawLabels) {
-	let date = new Date(rawLabels[i]*1000);
-	console.log("date: ", date);
-	let minutes = "0" + date.getMinutes();
-	let label = date.getHours() + ":" + minutes.substr(-2);
-	console.log("label:", label);
-	labels.push(label);
-}
-labels = labels.reverse()
-
 let seriesData = [{{range .PrimaryGraph.Series}}
 {{.}},{{end}}
 ];
-seriesData = seriesData.reverse();
-
-Chartist.Line('.ct-chart', {
-  labels: labels,
-  series: [seriesData],
-}, {
-  height: '250px',
-});
+buildStatsChart(rawLabels, seriesData, "{{.TimeRange}}");
 </script>
 {{template "footer.html" . }}
